# crm_lead_classifier

./: .gitignore  config.py  main.py  pyproject.toml  requirements.txt  test_interaction_builder.py
input/: calls_organization_2025-12-29_to_2026-07-06_2085records.json  calls_organization_2026-07-11_to_2026-07-18_840records.json  conversations_organization_2025-12-29_to_2026-07-06_300chats.json
src/builders/: __init__.py  interaction_builder.py  lead_builder.py
src/classifiers/: __init__.py  base_classifier.py  classifier_factory.py  keyword_rules.py  rule_classifier.py
src/core/: detector.py  loader.py  logger.py  parser_statistics.py  pipeline.py  processor_result.py
src/exporters/: __init__.py  excel_exporter.py
src/models/: classification.py  enums.py  extracted_info.py  interaction.py  lead.py
src/processors/: __init__.py  base_processor.py  call_processor.py  email_processor.py  sms_processor.py
src/utils/: datetime_utils.py  email.py  lead_builder.py  phone.py  text.py
tests/: test_lead_builder.py  test_utils.py
