[project]
name = "crm-lead-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "colorlog>=6.8",
    "lxml>=5.2",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "phonenumbers>=8.13",
    "python-dateutil>=2.9",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",
    "tqdm>=4.66",
    "typing-extensions>=4.12",
]
